CPG-DEV/src/objects/AccountView__c.object
<CustomObject>
    <fields>
        <fullName>Account_Access_Custom__c</fullName>
        <formula>CASE(Account_Access__c, &apos;Read Only&apos;, &apos;Read&apos;,&apos;Read/Write&apos;,&apos;Edit&apos;,&apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Access Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Access__c</fullName>
        <label>Account Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Team_Role__c</fullName>
        <label>Account Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Qualifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Account Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Service Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services Engineer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Team View</relationshipLabel>
        <relationshipName>AccountViews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT CURRENTLY USED</description>
        <label>Business Detail</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>BusinessDetail__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessDetail__c</referenceTo>
        <relationshipLabel>Account Team View</relationshipLabel>
        <relationshipName>Account_Team_View</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <formula>Business_Detail__r.BusinessAlias__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipName>Account_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Access_Custom__c</fullName>
        <formula>CASE(Case_Access__c,&apos;Read Only&apos;,&apos;Read&apos;,&apos;Read/Write&apos;,&apos;Edit&apos;,&apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Access Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Access__c</fullName>
        <label>Case Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access_Custom__c</fullName>
        <formula>CASE(Opportunity_Access__c, &apos;Private&apos;, &apos;None&apos;,&apos;Read Only&apos;,&apos;Read&apos;,&apos;Read/Write&apos;,&apos;Edit&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Access Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Team View</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>AccountTeamView Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team View</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>